Fixed line spacing on mobile

--- a/sale/styles/main.css
+++ b/sale/styles/main.css
@@ -234,8 +234,7 @@ h5 {
 
 .partners {
     margin: 28px auto;
-    max-height: 90px;
-    height: 100%;
+    width: 100%;
     display: block;
 }
 
@@ -247,6 +246,7 @@ h5 {
     display: block;
     padding: 6px;
     font-weight: bold;
+    line-height: 1.5em;
     background-color: #FFEE58;
 }
 .bottom h5 {
@@ -263,20 +263,22 @@ h5 {
 .bottom ul li {
     margin: 12px 0;
     font-size: 16px;
+    position: relative;
+    padding-left: 23px;
 }
 .bottom ul li:last-child {
     margin-bottom: 0;
 }
 .bottom li::before {
     content: "";
+    position: absolute;
     display: inline-block;
     background-color: rgb(54, 76, 97);
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-    margin-bottom: 1px;
-    margin-left: 5px;
-    margin-right: 8px;
+    width: 8px;
+    height: 8px;
+    border-radius: 8px;
+    top: 4px;
+    left: 5px;
 }
 .bottom .btn {
     max-width: 370px;
@@ -431,4 +433,10 @@ label {
     .cc-container .btn {
         margin-right: 20px;
     }
+    .partners {
+        height: 100%;
+        max-height: 90px;
+        width: auto;
+    }
+    
 }
